force-app/main/default/objects/TrackIT__License__c/TrackIT__License__c.object-meta.xml
<CustomObject>
    <description>Stores license information for computer hardware, cloud based applications, professional licenses, etc.</description>
    <label>License</label>
    <nameField>
        <label>License Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>