force-app/main/default/objects/TrackIT__License__c/fields/TrackIT__Available_Licenses__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Available_Licenses__c</fullName>
    <formula>TrackIT__Total_Licenses__c - TrackIT__Used_Licenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>