force-app/main/default/objects/TrackIT__License__c/fields/TrackIT__License_Type__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__License_Type</valueSetName>
    </valueSet>
</CustomField>