force-app/main/default/objects/TrackIT__License__c/fields/TrackIT__Product_Key__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Product_Key__c</fullName>
    <label>Product Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>