force-app/main/default/objects/TrackIT__License__c/fields/TrackIT__Total_Licenses__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Total_Licenses__c</fullName>
    <label>Total Licenses</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>