force-app/main/default/objects/TrackIT__License__c/fields/TrackIT__Used_Licenses__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Used_Licenses__c</fullName>
    <label>Used Licenses</label>
    <summarizedField>TrackIT__Assigned_License__c.TrackIT__Quantity__c</summarizedField>
    <summaryForeignKey>TrackIT__Assigned_License__c.TrackIT__License__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>