force-app/main/default/objects/TrackIT__License__c/recordTypes/TrackIT__License.recordType-meta.xml
<RecordType>
    <fullName>TrackIT__License</fullName>
    <active>true</active>
    <label>License</label>
</RecordType>