force-app/main/default/objects/TrackIT__License__c/listViews/TrackIT__All.listView-meta.xml
<ListView>
    <fullName>TrackIT__All</fullName>
    <columns>NAME</columns>
    <columns>TrackIT__License_Type__c</columns>
    <columns>TrackIT__Total_Licenses__c</columns>
    <columns>TrackIT__Available_Licenses__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>